chore: edit markdown

--- a/Sign Language Translator/ActionDetection.ipynb
+++ b/Sign Language Translator/ActionDetection.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 1. Import and Install Dependencies"
+    "# 1. Tải và import thư viện"
    ],
    "metadata": {}
   },
@@ -41,7 +41,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 2. Keypoints using MP Holistic"
+    "# 2. Nhận diện và vẽ keypoints bằng mediapipe holistic"
    ],
    "metadata": {}
   },
@@ -134,7 +134,7 @@
     "        # Show to screen\r\n",
     "        cv2.imshow('OpenCV Feed', image)\r\n",
     "\r\n",
-    "        # Break gracefully\r\n",
+    "        # Break when type 'q'\r\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\r\n",
     "            break\r\n",
     "    cap.release()\r\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 3. Extract Keypoint Values"
+    "# 3. Lấy ra các giá trị keypoints"
    ],
    "metadata": {}
   },
@@ -386,7 +386,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 4. Setup Folders for Collection"
+    "# 4. Thiết lập folder để lấy dữ liệu"
    ],
    "metadata": {}
   },
@@ -443,7 +443,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 5. Collect Keypoint Values for Training and Testing"
+    "# 5. Lấy các giá trị keypoints để train và test"
    ],
    "metadata": {}
   },
@@ -516,7 +516,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 6. Preprocess Data and Create Labels and Features"
+    "# 6. Xử lý dữ liệu và gắn label"
    ],
    "metadata": {}
   },
@@ -686,7 +686,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 7. Build and Train LSTM Neural Network"
+    "# 7. Xây dựng và train LSTM Neural Network"
    ],
    "metadata": {}
   },
@@ -4831,7 +4831,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 8. Make Predictions"
+    "# 8. Dự đoán bằng hàm predict()"
    ],
    "metadata": {}
   },
@@ -4921,7 +4921,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 10. Evaluation using Confusion Matrix and Accuracy"
+    "# 10. Ước lượng bằng Confusion Matrix"
    ],
    "metadata": {}
   },
@@ -5003,7 +5003,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 11. Test in Real Time"
+    "# 11. Test "
    ],
    "metadata": {}
   },
