--- a/Sign Language Translator/ActionDetection.ipynb
+++ b/Sign Language Translator/ActionDetection.ipynb
@@ -1958,7 +1958,8 @@
     "DATA_PATH = os.path.join('Data') \n",
     "\n",
     "# Actions that we try to detect\n",
-    "actions = np.array(['xin chao', 'cam on', 'toi yeu ban', 'ban khoe khong', 'ban ten gi'])\n",
+    "actions = np.array(['xin chao', 'cam on', 'toi yeu ban', 'ban khoe khong', 'ban ten gi',\n",
+    "                    'toi so', 'toi no roi', 'toi rat vui', 'toi 16 tuoi', 'toi muon noi chuyen'])\n",
     "\n",
     "# Thirty videos worth of data\n",
     "no_sequences = 30\n",
@@ -7626,7 +7627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
