--- a/Sign Language Translator/ActionDetection.ipynb
+++ b/Sign Language Translator/ActionDetection.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,13 +344,18 @@
     "DATA_PATH = os.path.join('Data') \n",
     "\n",
     "# Actions that we try to detect\n",
-    "actions = np.array(['ban hieu ngon ngu ky hieu khong', 'ban muon gio roi', \n",
-    "                    'ban trong cau co the', 'cai nay la cai gi',  'cap cuu',\n",
-    "                    'cong viec cua ban la gi', 'hen gap lai cac ban', 'toi bi cuop', \n",
-    "                    'toi bi dau dau', 'toi can an sang', 'toi dang an sang', \n",
-    "                    'toi dang o ben xe', 'toi dang o cong vien', 'toi dang phai cach ly',\n",
-    "                    'toi di sieu thi', 'toi di toi Ha Noi', 'toi khoi benh roi', \n",
-    "                    'toi khong quan tam', 'toi thay nho ban', 'toi thich an mi'])\n",
+    "actions = np.array(['ban dang lam gi', 'ban di dau the', 'ban hieu ngon ngu ky hieu khong', 'ban hoc lop may',\n",
+    "                    'ban khoe khong', 'ban muon gio roi', 'ban phai canh giac', 'ban ten la gi',\n",
+    "                    'ban tien bo day', 'ban trong cau co the', 'bo me toi cung la nguoi Diec', \n",
+    "                    'cai nay bao nhieu tien', 'cai nay la cai gi', 'cam on', 'cap cuu', 'chuc mung', 'con yeu me',\n",
+    "                    'cong viec cua ban la gi', 'hen gap lai cac ban', 'mon nay khong ngon', 'toi bi chong mat',\n",
+    "                    'toi bi cuop', 'toi bi dau dau', 'toi bi dau hong', 'toi bi ket xe', 'toi bi lac',\n",
+    "                    'toi cam thay rat hoi hop', 'toi cam thay rat vui', 'toi can an sang', 'toi can di ve sinh', \n",
+    "                    'toi can gap bac si', 'toi can phien dich', 'toi dang an sang', 'toi dang buon', \n",
+    "                    'toi dang o ben xe', 'toi dang o cong vien', 'toi dang phai cach ly', 'toi di sieu thi', \n",
+    "                    'toi di toi Ha Noi', 'toi khoi benh roi', 'toi khong hieu', 'toi khong quan tam', \n",
+    "                    'toi la hoc sinh', 'toi la nguoi Diec', 'toi song o Ha Noi', 'toi thay doi bung', \n",
+    "                    'toi thay nho ban', 'toi thich an mi', 'toi thich phim truyen', 'xin chao'])\n",
     "\n",
     "# Thirty videos worth of data\n",
     "no_sequences = 60\n",
@@ -378,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,35 +498,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ban hieu ngon ngu ky hieu khong': 0,\n",
-       " 'ban muon gio roi': 1,\n",
-       " 'ban trong cau co the': 2,\n",
-       " 'cai nay la cai gi': 3,\n",
-       " 'cap cuu': 4,\n",
-       " 'cong viec cua ban la gi': 5,\n",
-       " 'hen gap lai cac ban': 6,\n",
-       " 'toi bi cuop': 7,\n",
-       " 'toi bi dau dau': 8,\n",
-       " 'toi can an sang': 9,\n",
-       " 'toi dang an sang': 10,\n",
-       " 'toi dang o ben xe': 11,\n",
-       " 'toi dang o cong vien': 12,\n",
-       " 'toi dang phai cach ly': 13,\n",
-       " 'toi di sieu thi': 14,\n",
-       " 'toi di toi Ha Noi': 15,\n",
-       " 'toi khoi benh roi': 16,\n",
-       " 'toi khong quan tam': 17,\n",
-       " 'toi thay nho ban': 18,\n",
-       " 'toi thich an mi': 19}"
+       "{'ban dang lam gi': 0,\n",
+       " 'ban di dau the': 1,\n",
+       " 'ban hieu ngon ngu ky hieu khong': 2,\n",
+       " 'ban hoc lop may': 3,\n",
+       " 'ban khoe khong': 4,\n",
+       " 'ban muon gio roi': 5,\n",
+       " 'ban phai canh giac': 6,\n",
+       " 'ban ten la gi': 7,\n",
+       " 'ban tien bo day': 8,\n",
+       " 'ban trong cau co the': 9,\n",
+       " 'bo me toi cung la nguoi Diec': 10,\n",
+       " 'cai nay bao nhieu tien': 11,\n",
+       " 'cai nay la cai gi': 12,\n",
+       " 'cam on': 13,\n",
+       " 'cap cuu': 14,\n",
+       " 'chuc mung': 15,\n",
+       " 'con yeu me': 16,\n",
+       " 'cong viec cua ban la gi': 17,\n",
+       " 'hen gap lai cac ban': 18,\n",
+       " 'mon nay khong ngon': 19,\n",
+       " 'toi bi chong mat': 20,\n",
+       " 'toi bi cuop': 21,\n",
+       " 'toi bi dau dau': 22,\n",
+       " 'toi bi dau hong': 23,\n",
+       " 'toi bi ket xe': 24,\n",
+       " 'toi bi lac': 25,\n",
+       " 'toi cam thay rat hoi hop': 26,\n",
+       " 'toi cam thay rat vui': 27,\n",
+       " 'toi can an sang': 28,\n",
+       " 'toi can di ve sinh': 29,\n",
+       " 'toi can gap bac si': 30,\n",
+       " 'toi can phien dich': 31,\n",
+       " 'toi dang an sang': 32,\n",
+       " 'toi dang buon': 33,\n",
+       " 'toi dang o ben xe': 34,\n",
+       " 'toi dang o cong vien': 35,\n",
+       " 'toi dang phai cach ly': 36,\n",
+       " 'toi di sieu thi': 37,\n",
+       " 'toi di toi Ha Noi': 38,\n",
+       " 'toi khoi benh roi': 39,\n",
+       " 'toi khong hieu': 40,\n",
+       " 'toi khong quan tam': 41,\n",
+       " 'toi la hoc sinh': 42,\n",
+       " 'toi la nguoi Diec': 43,\n",
+       " 'toi song o Ha Noi': 44,\n",
+       " 'toi thay doi bung': 45,\n",
+       " 'toi thay nho ban': 46,\n",
+       " 'toi thich an mi': 47,\n",
+       " 'toi thich phim truyen': 48,\n",
+       " 'xin chao': 49}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
