--- a/Sign Language Translator/RunModel.ipynb
+++ b/Sign Language Translator/RunModel.ipynb
@@ -242,12 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "model.add(LSTM(64, return_sequences=True, activation='relu', input_shape=(60,126))) # 32\n",
+    "model.add(LSTM(32, return_sequences=True, activation='relu', input_shape=(60,126))) # 32\n",
     "model.add(LSTM(128, return_sequences=True, activation='relu'))\n",
     "model.add(LSTM(64, return_sequences=False, activation='relu'))\n",
     "model.add(Dense(64, activation='relu'))\n",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_weights('model 50 câu/pre_trained_50.h5') # main"
+    "model.load_weights('model 50 câu 95,33/95_sc_50.h5') # main"
    ]
   },
   {
