--- a/Sign Language Translator/ActionDetection.ipynb
+++ b/Sign Language Translator/ActionDetection.ipynb
@@ -231,34 +231,7 @@
     }
    ],
    "source": [
-    "len(results.left_hand_landmarks.landmark)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# draw_landmarks(frame, results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.imshow(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB))"
+    "# len(results.left_hand_landmarks.landmark)"
    ]
   },
   {
@@ -324,7 +297,7 @@
     }
    ],
    "source": [
-    "17*7+7"
+    "# 17*7+7"
    ]
   },
   {
