--- a/Sign Language Translator/ActionDetection.ipynb
+++ b/Sign Language Translator/ActionDetection.ipynb
@@ -555,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequences, labels = [], []\n",
+    "sequences, labels = [], [] #gán nhãn\n",
     "for action in actions:\n",
     "    for sequence in range(no_sequences):\n",
     "        window = []\n",
@@ -693,7 +693,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2) #chia test"
    ]
   },
   {
@@ -798,6 +798,9 @@
     "# model.add(Dense(64, activation='relu'))\n",
     "# model.add(Dense(32, activation='relu'))\n",
     "# model.add(Dense(actions.shape[0], activation='softmax'))\n",
+    "\n",
+    "\n",
+    "#Chỉnh sửa cấu trúc\n",
     "\n",
     "model = Sequential()\n",
     "model.add(LSTM(32, return_sequences=True, activation='relu', input_shape=(60,126))) # 64\n",
@@ -928,7 +931,7 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, epochs=60, callbacks=[tb_callback])\n"
+    "model.fit(X_train, y_train, epochs=60, callbacks=[tb_callback]) #train model\n"
    ]
   },
   {
@@ -989,7 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('Structure4.h5')"
+    "model.save('Structure4.h5') #lưu model, trong ngoặc là tên model"
    ]
   },
   {
@@ -998,7 +1001,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del model"
+    "del model #xóa model"
    ]
   },
   {
@@ -1019,7 +1022,7 @@
     }
    ],
    "source": [
-    "model.load_weights('Structure/Structure 5/85,139.h5') # main"
+    "# model.load_weights('Structure/Structure 5/85,139.h5') # main"
    ]
   },
   {
@@ -1028,7 +1031,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('Structure/Structure 5/85,139.h5')"
+    "model = load_model('Structure/Structure 5/85,139.h5') #load model, trong ngoặc là path"
    ]
   },
   {
